--- a/Wearable/src/main/res/values/strings.xml
+++ b/Wearable/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
 -->
 
 <resources>
-    <string name="app_name">Data Layer Sample Wearable App</string>
+    <string name="app_name">Score Keeper</string>
     <string name="waiting">Waiting for data to arrive\u2026</string>
     <string name="query_other_devices">Query for connected devices</string>
     <string name="query_mobile_camera">Query for mobile camera</string>
